# oci_genai_routes_and_wrapper

./: Dockerfile  README.md  pyproject.toml
payload/: embed.json  inference.json
src/: app.py
src/resources/: basic_auth.py  ocigenai.py
src/routers/: genai.py
