[tool.poetry]
name = "genai_private_route"
version = "0.1.0"
description = ""
authors = ["GenaiSolutions <genaisolutions@oracle.com>"]
readme = "README.md"
packages = [
                {include = "*", from="./src"},
            ]


[tool.poetry.dependencies]
python = "~3.12"
pip = "25.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.2"
black = "^25.1.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "src.app:load_app"

[tool.bandit]
skips = ["B608"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']